[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "addoc"
version = "1"
authors = [
    { name="Rodri Casas", email="cr.rodrigo.casas@gmail.com" },
]
description = "Addoc Connector"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Natural Language :: Spanish",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/casasrodri/addoc"
"Bug Tracker" = "https://github.com/casasrodri/addoc/issues"
